--- a/University-Library-Management/University-Library-Management.csproj
+++ b/University-Library-Management/University-Library-Management.csproj
@@ -60,6 +60,12 @@
     <Compile Include="student_form.Designer.cs">
       <DependentUpon>student_form.cs</DependentUpon>
     </Compile>
+    <Compile Include="student_main_screen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="student_main_screen.Designer.cs">
+      <DependentUpon>student_main_screen.cs</DependentUpon>
+    </Compile>
     <Compile Include="student_sign_in.cs">
       <SubType>Form</SubType>
     </Compile>
