--- a/University-Library-Management/University-Library-Management.csproj
+++ b/University-Library-Management/University-Library-Management.csproj
@@ -52,6 +52,30 @@
     <Compile Include="Form1.Designer.cs">
       <DependentUpon>Form1.cs</DependentUpon>
     </Compile>
+    <Compile Include="admin_form.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="admin_form.Designer.cs">
+      <DependentUpon>admin_form.cs</DependentUpon>
+    </Compile>
+    <Compile Include="admin_sign_up.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="admin_sign_up.Designer.cs">
+      <DependentUpon>admin_sign_up.cs</DependentUpon>
+    </Compile>
+    <Compile Include="admin_main_screen.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="admin_main_screen.Designer.cs">
+      <DependentUpon>admin_main_screen.cs</DependentUpon>
+    </Compile>
+    <Compile Include="admin_sign_in.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="admin_sign_in.Designer.cs">
+      <DependentUpon>admin_sign_in.cs</DependentUpon>
+    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="student_form.cs">
@@ -78,6 +102,12 @@
     <Compile Include="student_sign_upcs.Designer.cs">
       <DependentUpon>student_sign_upcs.cs</DependentUpon>
     </Compile>
+    <EmbeddedResource Include="admin_form.resx">
+      <DependentUpon>admin_form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="admin_sign_in.resx">
+      <DependentUpon>admin_sign_in.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
