adding books form with search engine

--- a/University-Library-Management/University-Library-Management.csproj
+++ b/University-Library-Management/University-Library-Management.csproj
@@ -90,6 +90,12 @@
     <Compile Include="student_update_password.Designer.cs">
       <DependentUpon>student_update_password.cs</DependentUpon>
     </Compile>
+    <Compile Include="view_books.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view_books.Designer.cs">
+      <DependentUpon>view_books.cs</DependentUpon>
+    </Compile>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
@@ -105,6 +111,9 @@
     <EmbeddedResource Include="student_form.resx">
       <DependentUpon>student_form.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="student_main_screen.resx">
+      <DependentUpon>student_main_screen.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="student_sign_in.resx">
       <DependentUpon>student_sign_in.cs</DependentUpon>
     </EmbeddedResource>
@@ -116,6 +125,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="student_update_password.resx">
       <DependentUpon>student_update_password.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view_books.resx">
+      <DependentUpon>view_books.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
