--- a/University-Library-Management/University-Library-Management.csproj
+++ b/University-Library-Management/University-Library-Management.csproj
@@ -126,6 +126,9 @@
     <EmbeddedResource Include="admin_sign_in.resx">
       <DependentUpon>admin_sign_in.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="admin_sign_up.resx">
+      <DependentUpon>admin_sign_up.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Form1.resx">
       <DependentUpon>Form1.cs</DependentUpon>
     </EmbeddedResource>
