--- a/University-Library-Management/University-Library-Management.csproj
+++ b/University-Library-Management/University-Library-Management.csproj
@@ -60,6 +60,12 @@
     <Compile Include="student_form.Designer.cs">
       <DependentUpon>student_form.cs</DependentUpon>
     </Compile>
+    <Compile Include="student_info.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="student_info.Designer.cs">
+      <DependentUpon>student_info.cs</DependentUpon>
+    </Compile>
     <Compile Include="student_main_screen.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -92,6 +98,9 @@
     </Compile>
     <EmbeddedResource Include="student_form.resx">
       <DependentUpon>student_form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="student_info.resx">
+      <DependentUpon>student_info.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="student_sign_in.resx">
       <DependentUpon>student_sign_in.cs</DependentUpon>
