adding student info

--- a/University-Library-Management/University-Library-Management.csproj
+++ b/University-Library-Management/University-Library-Management.csproj
@@ -114,6 +114,12 @@
     <Compile Include="student_update_password.Designer.cs">
       <DependentUpon>student_update_password.cs</DependentUpon>
     </Compile>
+    <Compile Include="student_info.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="student_info.Designer.cs">
+      <DependentUpon>student_info.cs</DependentUpon>
+    </Compile>
     <Compile Include="view_books.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -155,6 +161,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="student_update_password.resx">
       <DependentUpon>student_update_password.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="student_info.resx">
+      <DependentUpon>student_info.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view_books.resx">
       <DependentUpon>view_books.cs</DependentUpon>
