--- a/University-Library-Management/University-Library-Management.csproj
+++ b/University-Library-Management/University-Library-Management.csproj
@@ -46,6 +46,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="add_visit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="add_visit.Designer.cs">
+      <DependentUpon>add_visit.cs</DependentUpon>
+    </Compile>
     <Compile Include="Form1.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -120,8 +126,20 @@
     <Compile Include="view_books.Designer.cs">
       <DependentUpon>view_books.cs</DependentUpon>
     </Compile>
+    <Compile Include="view_visit.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view_visit.Designer.cs">
+      <DependentUpon>view_visit.cs</DependentUpon>
+    </Compile>
+    <EmbeddedResource Include="add_visit.resx">
+      <DependentUpon>add_visit.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="admin_form.resx">
       <DependentUpon>admin_form.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="admin_main_screen.resx">
+      <DependentUpon>admin_main_screen.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="admin_sign_in.resx">
       <DependentUpon>admin_sign_in.cs</DependentUpon>
@@ -158,6 +176,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view_books.resx">
       <DependentUpon>view_books.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view_visit.resx">
+      <DependentUpon>view_visit.cs</DependentUpon>
     </EmbeddedResource>
     <None Include="Properties\Settings.settings">
       <Generator>SettingsSingleFileGenerator</Generator>
