--- a/University-Library-Management/University-Library-Management.csproj
+++ b/University-Library-Management/University-Library-Management.csproj
@@ -58,6 +58,12 @@
     <Compile Include="add_visit.Designer.cs">
       <DependentUpon>add_visit.cs</DependentUpon>
     </Compile>
+    <Compile Include="admin_borrow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="admin_borrow.Designer.cs">
+      <DependentUpon>admin_borrow.cs</DependentUpon>
+    </Compile>
     <Compile Include="choose_book.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -156,6 +162,12 @@
     <Compile Include="view_books.Designer.cs">
       <DependentUpon>view_books.cs</DependentUpon>
     </Compile>
+    <Compile Include="view_borrow.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="view_borrow.Designer.cs">
+      <DependentUpon>view_borrow.cs</DependentUpon>
+    </Compile>
     <Compile Include="view_visit.cs">
       <SubType>Form</SubType>
     </Compile>
@@ -167,6 +179,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="add_visit.resx">
       <DependentUpon>add_visit.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="admin_borrow.resx">
+      <DependentUpon>admin_borrow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="admin_form.resx">
       <DependentUpon>admin_form.cs</DependentUpon>
@@ -225,6 +240,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="view_books.resx">
       <DependentUpon>view_books.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="view_borrow.resx">
+      <DependentUpon>view_borrow.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="view_visit.resx">
       <DependentUpon>view_visit.cs</DependentUpon>
