--- a/University-Library-Management/University-Library-Management.csproj
+++ b/University-Library-Management/University-Library-Management.csproj
@@ -64,6 +64,12 @@
     <Compile Include="admin_borrow.Designer.cs">
       <DependentUpon>admin_borrow.cs</DependentUpon>
     </Compile>
+    <Compile Include="BookRate.cs">
+      <SubType>Form</SubType>
+    </Compile>
+    <Compile Include="BookRate.Designer.cs">
+      <DependentUpon>BookRate.cs</DependentUpon>
+    </Compile>
     <Compile Include="choose_book.cs">
       <SubType>Form</SubType>
     </Compile>
