--- a/University-Library-Management/University-Library-Management.csproj
+++ b/University-Library-Management/University-Library-Management.csproj
@@ -287,6 +287,7 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="images\front-view-books-with-white-background %281%29.jpg" />
+    <None Include="images\Open Book - 640x348.png" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
